Deploy: bulk redeploy all sites

--- a/de/index.html
+++ b/de/index.html
@@ -1186,7 +1186,7 @@ img[width][height] {
             Im App Store herunterladen
           </a>
           <a href="#features" class="btn btn-large btn-secondary">
-            Features erkunden
+            Funktionen erkunden
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
