--- a/es/index.html
+++ b/es/index.html
@@ -1186,7 +1186,7 @@ img[width][height] {
             Descargar en App Store
           </a>
           <a href="#features" class="btn btn-large btn-secondary">
-            Explorar Funciones
+            Explorar funciones
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
