--- a/fr/index.html
+++ b/fr/index.html
@@ -1186,7 +1186,7 @@ img[width][height] {
             Télécharger sur l'App Store
           </a>
           <a href="#features" class="btn btn-large btn-secondary">
-            Découvrir les Fonctionnalités
+            Explorer les fonctionnalités
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
