--- a/ha/index.html
+++ b/ha/index.html
@@ -1196,7 +1196,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Binciko Siffofin
+                        Explore the Ecosystem
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
