--- a/hi/index.html
+++ b/hi/index.html
@@ -1191,7 +1191,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            सुविधाओं का अन्वेषण करें
+            अपना खेल चुनें
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
