--- a/it/index.html
+++ b/it/index.html
@@ -1188,7 +1188,7 @@ img[width][height] {
                         Scarica su App Store
                     </a>
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Esplora Funzionalità
+                        Esplora le funzionalità
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
