--- a/kn/index.html
+++ b/kn/index.html
@@ -1191,7 +1191,7 @@ img[width][height] {
           </a>
         </div>
         <div class="app-hero-secondary">
-          <a href="#features" class="btn btn-large btn-secondary">ವೈಶಿಷ್ಟ್ಯಗಳನ್ನು ಅನ್ವೇಷಿಸಿ</a>
+          <a href="#features" class="btn btn-large btn-secondary">Explore the Ecosystem</a>
         </div>
         <p class="mt-6 text-sm-muted">
           ✓ 7-ದಿನಗಳ ಉಚಿತ ಪ್ರಯೋಗ &nbsp;&nbsp; ✓ ಯಾವುದೇ ಖಾತೆ ಅಗತ್ಯವಿಲ್ಲ &nbsp;&nbsp; ✓ 100% ಸ್ಥಳೀಯ ಡೇಟಾ
