--- a/ms/index.html
+++ b/ms/index.html
@@ -1194,7 +1194,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Teroka Ciri-ciri
+            Jelajahi penyelesaian kami
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
