--- a/pl/index.html
+++ b/pl/index.html
@@ -1195,7 +1195,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Poznaj funkcje
+                        Wybierz swój sport
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
