--- a/pt/index.html
+++ b/pt/index.html
@@ -1186,7 +1186,7 @@ img[width][height] {
             Descarregar na App Store
           </a>
           <a href="#features" class="btn btn-large btn-secondary">
-            Explorar Funcionalidades
+            Explorar funcionalidades
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
