--- a/ru/index.html
+++ b/ru/index.html
@@ -1191,7 +1191,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Изучить функции
+            Исследовать экосистему
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
