--- a/zh/index.html
+++ b/zh/index.html
@@ -1186,7 +1186,7 @@ img[width][height] {
             在 App Store 下载
           </a>
           <a href="#features" class="btn btn-large btn-secondary">
-            探索功能
+            探索我们的应用
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
