--- a/af/index.html
+++ b/af/index.html
@@ -1191,7 +1191,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Verken Kenmerke
+            Verken Ons Apps
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
