--- a/ca/index.html
+++ b/ca/index.html
@@ -1191,7 +1191,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Explora les Funcions
+            Explorar funcions
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
