--- a/el/index.html
+++ b/el/index.html
@@ -1195,7 +1195,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Εξερευνήστε τις Λειτουργίες
+                        Επιλέξτε το σπορ σας
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
