--- a/fi/index.html
+++ b/fi/index.html
@@ -1194,7 +1194,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Tutustu ominaisuuksiin
+            Tutustu sovelluksiimme
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
