--- a/he/index.html
+++ b/he/index.html
@@ -1194,7 +1194,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            גלה את התכונות
+            גלה את הפתרונות שלנו
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
