--- a/hr/index.html
+++ b/hr/index.html
@@ -1195,7 +1195,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Istražite značajke
+            Istražite naša rješenja
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
