--- a/hu/index.html
+++ b/hu/index.html
@@ -1197,7 +1197,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Funkciók Felfedezése
+                        Válassz sportágat
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
