--- a/is/index.html
+++ b/is/index.html
@@ -1192,7 +1192,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Kanna eiginleika
+                        Skoðaðu lausnir okkar
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
