--- a/ja/index.html
+++ b/ja/index.html
@@ -1195,7 +1195,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        機能を見る
+                        アプリを探索
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
