--- a/nb/index.html
+++ b/nb/index.html
@@ -1196,7 +1196,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Utforsk funksjoner
+                        Velg din sport
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
