--- a/nl/index.html
+++ b/nl/index.html
@@ -1194,7 +1194,7 @@ img[width][height] {
         </div>
         <div class="app-hero-secondary">
           <a href="#features" class="btn btn-large btn-secondary">
-            Bekijk Functies
+            Verken Onze Apps
           </a>
         </div>
         <p class="mt-6 text-sm-muted">
