--- a/sl/index.html
+++ b/sl/index.html
@@ -1197,7 +1197,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        Raziščite funkcije
+                        Raziščite naše rešitve
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
