--- a/ur/index.html
+++ b/ur/index.html
@@ -1197,7 +1197,7 @@ img[width][height] {
                 </div>
                 <div class="app-hero-secondary">
                     <a href="#features" class="btn btn-large btn-secondary">
-                        خصوصیات دریافت کریں
+                        اپنے کھیل کا انتخاب کریں
                     </a>
                 </div>
                 <p class="mt-6 text-sm-muted">
